apps/homerun2/components/omni-pitcher/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homerun2-omni-pitcher
  namespace: ${HOMERUN2_NAMESPACE:-homerun2}
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE:-default}
  hostnames:
    - ${HOMERUN2_OMNI_PITCHER_HOSTNAME:-omni-pitcher}.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homerun2-omni-pitcher
          port: 80
